docs/v0.0.3/_sources/gallery/workflow/workflow.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/workflow/workflow.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_workflow_workflow.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_workflow_workflow.py:


Workflow example
================

Just a dummy example to illustrate the workflow examples gallery.

.. GENERATED FROM PYTHON SOURCE LINES 8-26



.. image-sg:: /gallery/workflow/images/sphx_glr_workflow_001.png
   :alt: workflow
   :srcset: /gallery/workflow/images/sphx_glr_workflow_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /opt/hostedtoolcache/Python/3.13.9/x64/lib/python3.13/site-packages/RosettaX/data/fcs/sample.fcs
    /opt/hostedtoolcache/Python/3.13.9/x64/lib/python3.13/site-packages/matplotlib/cbook.py:1355: RuntimeWarning: invalid value encountered in cast
      return np.asarray(x, float)






|

.. code-block:: Python

    from RosettaX.reader import FCSFile
    from RosettaX.directories import fcs_data
    import matplotlib.pyplot as plt

    file_dir = fcs_data / "sample.fcs"

    print(file_dir)

    data = FCSFile(fcs_data / "sample.fcs")

    data.read_all_data()

    figure, ax = plt.subplots()
    ax.plot(data.data["FSC-A"], data.data["SSC-A"], ".")
    ax.set_xlabel("FSC-A")
    ax.set_ylabel("SSC-A")
    plt.show()



.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.586 seconds)


.. _sphx_glr_download_gallery_workflow_workflow.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: workflow.ipynb <workflow.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: workflow.py <workflow.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: workflow.zip <workflow.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
